<resources>
    <string name="app_name">5MiaoSDKDemo</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="enter_5miao">进入5秒轻游戏</string>
    <string name="login">登录</string>
    <string name="logout">登出</string>
    <string name="welcome">，欢迎你</string>
    <string name="login_logout"><![CDATA[登录 & 登出]]></string>
    <string name="uid">用户ID：</string>
    <string name="name">姓名：</string>
    <string name="avator">头像：</string>
    <string name="login_success">成功</string>
    <string name="login_failure">失败</string>
    <string name="login_cancel">取消</string>
    <string name="bye">再见</string>
</resources>
